# internal/services/holdings/response/list.go
@@ -1,6 +1,6 @@
 package response
 
-type ListResponse struct {
-	Items []*RetrieveResponse `json:"items"`
-	Count int                 `json:"count"`
+type HoldingListResponse struct {
+	Items []*HoldingRetrieveResponse `json:"items"`
+	Count int                        `json:"count"`
 }
