# internal/services/holdings/response/retrieve.go
@@ -2,12 +2,12 @@ package response
 
 import "github.com/google/uuid"
 
-type RetrieveResponse struct {
-	Id         uuid.UUID `json:"id"`
-	InvestorId uuid.UUID `json:"investorId"`
-	Name       string    `json:"name"`
-	Year       int       `json:"year"`
-	Quarter    int       `json:"quarter"`
-	Value      int       `json:"value"`
-	Shares     int       `json:"shares"`
+type HoldingRetrieveResponse struct {
+	Id         uuid.UUID `json:"id" example:"123e4567-e89b-12d3-a456-426614174000"`         // holding id
+	InvestorId uuid.UUID `json:"investorId" example:"123e4567-e89b-12d3-a456-426614174000"` // investor id
+	Name       string    `json:"name" example:"Company Name"`                               // holding name
+	Year       int       `json:"year" example:"2021"`                                       // holding year
+	Quarter    int       `json:"quarter" example:"1"`                                       // holding quarter
+	Value      int       `json:"value" example:"1000000"`                                   // total amount of holding value
+	Shares     int       `json:"shares" example:"1000"`                                     // number of stock shares
 }
